objects/Custom_Notifications_Sent__c.object
<CustomObject>
    <description>An Object to hold references to desktop and mobile custom notifications sent (so as to prevent sending dup notifications)</description>
    <fields>
        <fullName>Accel_VGT_Live_Date__c</fullName>
        <formula>DBA_Name__r.Accel_VGT_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel VGT Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <description>The type of alert.. this allows us to branch off. .say in a flow and send multiple types of alerts to the same entity.</description>
        <inlineHelpText>The type of alert.. this allows us to branch off. .say in a flow and send multiple types of alerts to the same entity.</inlineHelpText>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO_ASSIGNED_RESOURCE</fullName>
                </value>
                <value>
                    <fullName>NOT_DISPATCHED</fullName>
                </value>
                <value>
                    <fullName>No Visit in 30 Days</fullName>
                </value>
                <value>
                    <fullName>No Visit in 45 Days</fullName>
                </value>
                <value>
                    <fullName>DISPATCHED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Notification_Api_Name__c</fullName>
        <description>The Api name of the SFDC CustomNotification Record used for delivery.</description>
        <inlineHelpText>The Api name of the SFDC CustomNotification Record used for delivery.</inlineHelpText>
        <label>Custom Notification Api Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TEST_SERVICE_WATCHDOG_NOTIFICATION</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DBA Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom Notifications Sent</relationshipLabel>
        <relationshipName>Custom_Notifications_Sent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DBA_State__c</fullName>
        <formula>DBA_Name__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Notification_Was_Sent__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Notification Was Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPD__c</fullName>
        <formula>DBA_Name__r.Account_HPD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IGB__c</fullName>
        <formula>DBA_Name__r.IGB_License__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGB #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Msg_Body__c</fullName>
        <description>The Body of the custom notification (Currently generated inside of flows)</description>
        <inlineHelpText>The Body of the custom notification.</inlineHelpText>
        <label>Msg Body`</label>
        <length>2084</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Msg_Title__c</fullName>
        <description>The Title of the custom notification (Currently Generated inside of flows)</description>
        <inlineHelpText>The Title of the custom notification</inlineHelpText>
        <label>Msg Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <description>The type of notification, either Manual (user clicked the send icon) or Automated.</description>
        <inlineHelpText>The type of notification, either Manual (user clicked the send icon) or Automated.The type of notification, either Manual (user clicked the send icon) or Automated.</inlineHelpText>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Automated</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the parent record  (ie target id) is a Service Appointment, this will be populated.</description>
        <inlineHelpText>If the parent record  (ie target id) is a Service Appointment, this will be populated.</inlineHelpText>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Custom Notifications Sent</relationshipLabel>
        <relationshipName>Custom_Notifications_Sent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the recipient Id is a User.. This will be populated.</description>
        <inlineHelpText>If the recipient Id is a User.. This will be populated.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Notifications_Sent</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Custom Notifications Sent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Alert_Type__c</columns>
        <columns>Notification_Type__c</columns>
        <columns>User__c</columns>
        <columns>Service_Appointment__c</columns>
        <columns>Msg_Title__c</columns>
        <columns>Msg_Body__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_DISPATCHED</fullName>
        <columns>NAME</columns>
        <columns>Notification_Type__c</columns>
        <columns>DBA_Name__c</columns>
        <columns>User__c</columns>
        <columns>Service_Appointment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Msg_Title__c</columns>
        <columns>Msg_Body__c</columns>
        <columns>Alert_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Alert_Type__c</field>
            <operation>equals</operation>
            <value>DISPATCHED</value>
        </filters>
        <label>All DISPATCHED</label>
    </listViews>
    <listViews>
        <fullName>Svc_Watchdog_Automated</fullName>
        <columns>NAME</columns>
        <columns>Alert_Type__c</columns>
        <columns>Notification_Type__c</columns>
        <columns>User__c</columns>
        <columns>Service_Appointment__c</columns>
        <columns>Msg_Title__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Custom_Notification_Api_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Alert_Type__c</field>
            <operation>equals</operation>
            <value>NO_ASSIGNED_RESOURCE,NOT_DISPATCHED</value>
        </filters>
        <label>Svc Watchdog - All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000000}</displayFormat>
        <label>Notification #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Notifications Sent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>